--- a/source/sass/modules/_header.scss
+++ b/source/sass/modules/_header.scss
@@ -1,9 +1,5 @@
 .header {
-    background-color: transparent;
-    font-size: 0;
-    left: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: $z_layer_01;
+    border-bottom: 1px solid $grey-light;
+    padding-bottom: $expander-one;
+    padding-top: $expander-one;
     }
