--- a/source/sass/screen.scss
+++ b/source/sass/screen.scss
@@ -27,9 +27,10 @@
 @import "modules/header";
 @import "modules/navigation";
 @import "modules/screens";
-@import "modules/covers";
+//@import "modules/covers";
 @import "modules/animate";
 @import "modules/classes";
+@import "modules/index";
 
 
 
