--- a/source/sass/core/_document.scss
+++ b/source/sass/core/_document.scss
@@ -2,7 +2,7 @@
  * Document
 *******************************************************************************/
 html {
-    background-color: $grey-bg;
+    background-color: $white;
     box-sizing: border-box;
     overflow-x: hidden;
     overflow-y: auto;
