--- a/source/sass/core/_icons.scss
+++ b/source/sass/core/_icons.scss
@@ -1,3 +1,51 @@
 /******************************************************************************
  * Icons
 *******************************************************************************/
+.icon-wrap {
+    cursor: pointer;
+    display: inline-block;
+    margin: -30px;
+    padding: 30px;
+    }
+.icon {
+    cursor: pointer;
+    display: inline-block;
+    line-height: 1;
+    position: relative;
+    text-align: center;
+    vertical-align: middle;
+    }
+.icon--svg {
+    svg {
+        fill: $black;
+        transition: fill $base-duration $ease;
+        }
+    }
+.icon--light {
+    svg {
+        fill: $white;
+        }
+    }
+.icon--list {
+    border-top: 2px solid $black;
+    height: 18px;
+    width: 24px;
+
+    &:after,
+    &:before {
+        background-color: $black;
+        content: "";
+        height: 2px;
+        left: 0;
+        position: absolute;
+        }
+    &:after {
+        bottom: 0;
+        width: 100%;
+        }
+    &:before {
+        margin-top: -2px;
+        top: 50%;
+        width: 15px;
+        }
+    }
