--- a/source/sass/modules/_screens.scss
+++ b/source/sass/modules/_screens.scss
@@ -1,8 +1,5 @@
-$screen-wrap-delay: ($midi-duration / 2);
-
-
 .screen {
-    background-color: $white;
+    background-color: $black;
     bottom: 0;
     left: 0;
     opacity: 0;
@@ -11,7 +8,7 @@ $screen-wrap-delay: ($midi-duration / 2);
     position: fixed;
     right: 0;
     top: 0;
-    transition: opacity $midi-duration $ease-cubic;
+    transition: opacity $fast-duration $ease;
     z-index: ($z_layer_infront + 1);
 
     &.is-active {
@@ -19,18 +16,3 @@ $screen-wrap-delay: ($midi-duration / 2);
         -webkit-overflow-scrolling: touch;
         }
     }
-.screen--dark {
-    background-color: $black;
-    }
-.screen__wrap {
-    opacity: 0;
-    transform: translate3d( 0, $nudge-size, 0 );
-    transition: opacity $midi-duration $ease-cubic $screen-wrap-delay,
-                transform $midi-duration $ease $screen-wrap-delay;
-    }
-.screen.is-active {
-    .screen__wrap {
-        opacity: 1;
-        transform: translate3d( 0, 0, 0 );
-        }
-}
