--- a/source/sass/state/_responsive.scss
+++ b/source/sass/state/_responsive.scss
@@ -1,3 +1,8 @@
 /******************************************************************************
  * Responsive
 *******************************************************************************/
+@media only screen and ( max-width: 1440px ) {
+    .index__col:not( :first-child ) {
+        padding-left: $expander-one;
+        }
+}
