--- a/source/sass/config/_variables.scss
+++ b/source/sass/config/_variables.scss
@@ -2,11 +2,10 @@
  * Fonts
 *******************************************************************************/
 
-// Serif
-$serif-text: "Georgia";
-
-// Sans Serif
-$sans-serif-text: "Helvetica";
+$sans-text-regular: "GT-Walsheim-Regular";
+$sans-text-regular-oblique: "GT-Walsheim-Regular-Oblique";
+$sans-text-medium: "GT-Walsheim-Medium";
+$sans-text-medium-oblique: "GT-Walsheim-Medium-Oblique";
 
 
 
