--- a/source/sass/modules/_screens.scss
+++ b/source/sass/modules/_screens.scss
@@ -16,3 +16,15 @@
         -webkit-overflow-scrolling: touch;
         }
     }
+
+
+
+.screen.ghost > .ghost__child {
+    width: 100%;
+    }
+
+
+
+.intro {
+    background-color: #fed412;
+    }
