--- a/source/sass/state/_responsive.scss
+++ b/source/sass/state/_responsive.scss
@@ -2,7 +2,20 @@
  * Responsive
 *******************************************************************************/
 @media only screen and ( max-width: 1440px ) {
-    .index__col:not( :first-child ) {
+    .index__col:not( :first-child ),
+    .filter__col:not( :first-child ) {
         padding-left: $expander-one;
+        }
+}
+
+
+
+@media only screen and ( max-width: $break-mobile-full ) {
+    .index__col {
+        width: 50%;
+        }
+    .index__categories,
+    .index__location {
+        display: none;
         }
 }
