--- a/source/sass/state/_states.scss
+++ b/source/sass/state/_states.scss
@@ -1,6 +1,12 @@
 /******************************************************************************
  * Document States
 *******************************************************************************/
+.is-hoverable {
+    .a-link:hover {
+        color: $grey-text;
+        }
+}
+
 .is-hidden {
     display: none;
 }
