--- a/source/sass/modules/_navigation.scss
+++ b/source/sass/modules/_navigation.scss
@@ -1,11 +1,7 @@
 /******************************************************************************
  * Nav Menu
 *******************************************************************************/
-.nav__menu {
-    left: 0;
-    position: absolute;
-    top: 0;
-    }
+.nav__menu {}
 .nav__menu__li {
     display: inline-block;
     vertical-align: middle;
