--- a/source/sass/core/_document.scss
+++ b/source/sass/core/_document.scss
@@ -11,6 +11,7 @@ html {
 body {
     background-color: transparent;
     color: $black;
+    line-height: 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-tap-highlight-color: rgba( 0, 0, 0, 0 );
