--- a/source/sass/core/_pages.scss
+++ b/source/sass/core/_pages.scss
@@ -6,9 +6,10 @@
     left: 0;
     max-height: 100%;
     overflow: auto;
-    padding-top: 140px;
+    padding-top: calc( #{$header-height} - 1px );
     top: 0;
-    transition: opacity $fast-duration $ease;
+    transition: opacity $fast-duration $ease,
+                padding-left $long-duration $ease-cubic-sharp;
     width: 100%;
 
     &.is-reactive {
