--- a/source/sass/modules/_header.scss
+++ b/source/sass/modules/_header.scss
@@ -1,10 +1,12 @@
 .header {
-    //border-bottom: 1px solid $grey-light;
+    height: $header-height;
     left: 0;
-    padding-bottom: $expander-one;
-    padding-top: $expander-one;
     position: fixed;
     top: 0;
+    transition: padding-left $long-duration $ease-cubic-sharp;
     width: 100%;
     z-index: $z_layer_10;
+    }
+.header__wrap {
+    width: 100%;
     }
