--- a/source/sass/state/_responsive.scss
+++ b/source/sass/state/_responsive.scss
@@ -1,11 +1,20 @@
 /******************************************************************************
  * Responsive
 *******************************************************************************/
-@media only screen and ( max-width: 1440px ) {
-    .index__col:not( :first-child ),
-    .filter__col:not( :first-child ) {
+@media only screen and ( max-width: $break-laptop-medium ) {
+    .index__col:not( :first-child ) {
         padding-left: $expander-one;
         }
+    .filter {
+        padding-left: $expander-one;
+        width: 320px;
+        }
+    .is-filter-open {
+        .page,
+        .header {
+            padding-left: 320px;
+            }
+    }
 }
 
 
