--- a/template/artist/document.html
+++ b/template/artist/document.html
@@ -1,8 +1,10 @@
-<article class="artist js-artist wrapper -exp -f-zero -text--center" data-id="<%= document.id %>">
+<article class="artist js-artist -wrap -exp -f-zero -text--center" data-id="<%= document.id %>">
     <p class="p">{{data.name.value}}</p>
-    <p class="p meta">{{data.region.value.data.name.value}}</p>
-    <p class="p meta">{{data.city.value.data.name.value}}</p>
-    <div class="artist__gallery -column -column--2of4">
+    <p class="p">{{data.city.value.data.name.value}}</p>
+    <p class="p">
+        <a href="{{data.website.value}}" class="a" target="_blank">Website</a>
+    </p>
+    <div class="artist__gallery -column -column--1of4">
         <img v-for="galleryImage in data.gallery.value" class="artist__gallery__image image js-artist-image -exp" data-img-src="{{galleryImage.value.image.url}}" />
     </div>
 </article>
