--- a/template/index.html
+++ b/template/index.html
@@ -1,5 +1,5 @@
 <section class="index js-index">
-    <a class="index__row wrapper -exp -f-zero -text--center" v-show="artist.show" v-for="artist in artists" href="/artist/{{artist.slug}}/" data-uuid="{{artist.uuid}}">
+    <a class="index__row -wrap -exp -f-zero -text--center" v-show="artist.show" v-for="artist in artists" href="/artist/{{artist.slug}}/" data-uuid="{{artist.uuid}}">
         <div class="index__col -column -text--left">
             <div class="index__thumbnail">
                 <figure class="index__figure">
@@ -15,7 +15,7 @@
             <p class="p meta" v-for="category in artist.data.categories.value">{{category.value.data.name.value}}</p>
         </div>
         <div class="index__col index__location -column -text--left">
-            <p class="p meta">{{artist.data.region.value.data.name.value}}</p>
+            <p class="p meta">{{artist.data.city.value.data.name.value}}</p>
         </div>
     </a>
 </section>
